Closed
Bug 1473881
Opened 7 years ago
Closed 7 years ago
gfx/vr/VRManager.cpp: error: undefined symbol: mozilla::gfx::VRService::Create()
Categories
(Core :: WebVR, defect)
Tracking
()
RESOLVED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox-esr60 | --- | unaffected |
firefox61 | --- | unaffected |
firefox62 | --- | unaffected |
firefox63 | --- | fixed |
People
(Reporter: jbeich, Assigned: jbeich)
References
Details
(Keywords: regression)
Attachments
(1 file)
On Tier3 platforms VR support is disabled at built but referenced.
$ ./mach bootstrap
$ ./mach build
[...]
17:42.34 libxul.so
17:42.77 /usr/bin/ld.lld: error: undefined symbol: mozilla::gfx::VRService::Create()
17:42.77 >>> referenced by Unified_cpp_gfx_vr0.cpp
17:42.77 >>> ../../gfx/vr/Unified_cpp_gfx_vr0.o:(mozilla::gfx::VRManager::VRManager())
17:42.77 /usr/bin/ld.lld: error: undefined symbol: mozilla::gfx::VRService::~VRService()
17:42.77 >>> referenced by Unified_cpp_gfx_vr0.cpp
17:42.77 >>> ../../gfx/vr/Unified_cpp_gfx_vr0.o:(mozilla::gfx::VRManager::VRManager())
17:42.77 /usr/bin/ld.lld: error: undefined symbol: mozilla::gfx::VRService::GetAPIShmem()
17:42.77 >>> referenced by Unified_cpp_gfx_vr0.cpp
17:42.77 >>> ../../gfx/vr/Unified_cpp_gfx_vr0.o:(mozilla::gfx::VRManager::VRManager())
17:42.77 /usr/bin/ld.lld: error: undefined symbol: mozilla::gfx::VRService::~VRService()
17:42.77 >>> referenced by Unified_cpp_gfx_vr0.cpp
17:42.77 >>> ../../gfx/vr/Unified_cpp_gfx_vr0.o:(mozilla::gfx::VRManager::~VRManager())
17:42.77 /usr/bin/ld.lld: error: undefined symbol: mozilla::gfx::VRService::Start()
17:42.77 >>> referenced by Unified_cpp_gfx_vr0.cpp
17:42.77 >>> ../../gfx/vr/Unified_cpp_gfx_vr0.o:(mozilla::gfx::VRManager::RefreshVRDisplays(bool))
17:42.77 /usr/bin/ld.lld: error: undefined symbol: mozilla::gfx::VRService::Stop()
17:42.77 >>> referenced by Unified_cpp_gfx_vr0.cpp
17:42.77 >>> ../../gfx/vr/Unified_cpp_gfx_vr0.o:(mozilla::gfx::VRManager::CheckForInactiveTimeout())
17:42.77 /usr/bin/ld.lld: error: undefined symbol: mozilla::gfx::VRService::Stop()
17:42.77 >>> referenced by Unified_cpp_gfx_vr0.cpp
17:42.78 >>> ../../gfx/vr/Unified_cpp_gfx_vr0.o:(mozilla::gfx::VRManager::CheckForInactiveTimeout())
17:42.84 clang++: error: linker command failed with exit code 1 (use -v to see invocation)
Comment hidden (mozreview-request) |
Comment hidden (obsolete) |
Comment 3•7 years ago
|
||
mozreview-review |
Comment on attachment 8990302 [details]
Bug 1473881 - Unbreak build on Tier3 after bug 1466699.
https://reviewboard.mozilla.org/r/255336/#review262264
LGTM, thanks!
Attachment #8990302 -
Flags: review?(kgilbert) → review+
Pushed by kgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/13fe520dd190
Unbreak build on Tier3 after bug 1466699. r=kip
Comment 5•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Updated•7 years ago
|
Assignee: nobody → jbeich
Updated•7 years ago
|
status-firefox61:
--- → unaffected
status-firefox62:
--- → unaffected
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•