Bug 1473881 - Unbreak build on Tier3 after bug 1466699. r=kip

MozReview-Commit-ID: 7G9bLplXoHB